# dolfinx_optim

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  test_cheeger.py  test_cheeger_dual.py
_autosummary/: dolfinx_optim.cones.html  dolfinx_optim.convex_function.conjugate.html  dolfinx_optim.convex_function.convex_term.html  dolfinx_optim.convex_function.eigenvalues.html  dolfinx_optim.convex_function.epigraph.html  dolfinx_optim.convex_function.html  dolfinx_optim.convex_function.infconvolution.html  dolfinx_optim.convex_function.norms.html  dolfinx_optim.convex_function.partial_minimization.html  dolfinx_optim.convex_function.perspective.html  dolfinx_optim.convex_function.simple_terms.html  dolfinx_optim.html  dolfinx_optim.mosek_io.html  dolfinx_optim.utils.html
_modules/: index.html
_modules/dolfinx_optim/: cones.html  mosek_io.html  utils.html
_sources/: api.rst  cones.rst  index.ipynb
_sources/_autosummary/: dolfinx_optim.convex_function.eigenvalues.rst  dolfinx_optim.convex_function.norms.rst  dolfinx_optim.convex_function.rst  (+2 more)
api/: api.html  cones.html  convex_function.html  mosek_io.html  primitives.html  transforms.html  utils.html
docs/: _config.yml  _toc.yml  index.md  references.bib
docs/api/: api.rst  (+3 more)
dolfinx_optim/: __init__.py  cones.py  convex_function.py  mosek_io.py  utils.py
tests/: test_cheeger.py  test_constraints.py  test_expression_splitting.py  test_interpolation_operator.py  test_optimization.py  test_sdp.py  test_utils.py
(+45 files in other folders)
