[metadata]
name = dolfinx_optim
version = 0.1.0
author = Jeremy Bleyer
author_email = jeremy.bleyer@enpc.fr
description = Automated Convex Optimization in FEniCSx
long_description = file: README.md
keywords = optimization, PDF

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    mosek
    dolfinx
